--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aiofiles = "^24.1.0"
 python-telegram-bot = "^22.0"
 google-cloud-storage = "^3.1.0"
 python-dotenv = "^1.1.0"
+firebase-admin = "^6.7.0"
 
 
 [build-system]
