--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-telegram-bot = "^22.0"
 google-cloud-storage = "^3.1.0"
 python-dotenv = "^1.1.0"
 firebase-admin = "^6.7.0"
+pandas = "^2.2.3"
 
 
 [build-system]
