--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ google-cloud-storage = "^3.1.0"
 python-dotenv = "^1.1.0"
 firebase-admin = "^6.7.0"
 pandas = "^2.2.3"
+logging = "^0.4.9.6"
 
 
 [build-system]
