--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^1.1.0"
 firebase-admin = "^6.7.0"
 pandas = "^2.2.3"
 logging = "^0.4.9.6"
+python-multipart = "^0.0.20"
 
 
 [build-system]
